# ChangeLog for x11-libs/libICE
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libICE/ChangeLog,v 1.50 2008/01/31 04:15:17 dberkholz Exp $

  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>; -libICE-1.0.1.ebuild:
  Clean up.

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> libICE-1.0.4.ebuild:
  Stable on x86 (bug #202087)

  16 Dec 2007; Markus Rothe <corsair@gentoo.org> libICE-1.0.4.ebuild:
  Stable on ppc64; bug #202087

  16 Dec 2007; nixnut <nixnut@gentoo.org> libICE-1.0.4.ebuild:
  Stable on ppc wrt bug 202087

  15 Dec 2007; Doug Klima <cardoe@gentoo.org> libICE-1.0.4.ebuild:
  amd64 stable wrt bug #202087

  13 Dec 2007; Raúl Porcel <armin76@gentoo.org> libICE-1.0.4.ebuild:
  alpha/ia64 stable wrt #202087

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> libICE-1.0.4.ebuild:
  Sparc stable --- Bug #202087 --- good for 3 months.

*libICE-1.0.4 (08 Sep 2007)

  08 Sep 2007; Donnie Berkholz <dberkholz@gentoo.org>; +libICE-1.0.4.ebuild:
  Bump for 7.3.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> libICE-1.0.3.ebuild:
  Stable on sparc wrt #175465

  03 Jul 2007; Lars Weiler <pylon@gentoo.org> libICE-1.0.3.ebuild:
  Stable on ppc; bug #175465.

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org> libICE-1.0.3.ebuild:
  alpha stable wrt #175465

  27 May 2007; Joshua Kinard <kumba@gentoo.org> libICE-1.0.3.ebuild:
  Stable on mips.

  20 May 2007; Jeroen Roovers <jer@gentoo.org> libICE-1.0.3.ebuild:
  Stable for HPPA (bug #175465).

  04 May 2007; Daniel Gryniewicz <dang@gentoo.org> libICE-1.0.3.ebuild:
  Marked stable on amd64 for bug #175465

  29 Apr 2007; Andrej Kacian <ticho@gentoo.org> libICE-1.0.3.ebuild:
  Stable on x86, bug #175465.

  25 Apr 2007; Raúl Porcel <armin76@gentoo.org> libICE-1.0.3.ebuild:
  Stable on ia64 wrt bug #175465.

  25 Apr 2007; Markus Rothe <corsair@gentoo.org> libICE-1.0.3.ebuild:
  Stable on ppc64; bug #175465
