@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libICE
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libICE/ChangeLog,v 1.50 2008/01/31 04:15:17 dberkholz Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libICE/ChangeLog,v 1.51 2009/05/04 15:14:04 ssuominen Exp $
+
+  04 May 2009; Samuli Suominen <ssuominen@gentoo.org> libICE-1.0.3.ebuild,
+  libICE-1.0.4.ebuild:
+  Move use_ functions out of global scope.
 
   31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>; -libICE-1.0.1.ebuild:
   Clean up.
